--- a/blocks.html
+++ b/blocks.html
@@ -207,63 +207,72 @@
                               </section>
                               <section class="blocks__more-table">
                                     <h3 class="blocks__more-table-name">Таблица</h3>
-                                    <table class="more-table">
-                                          <caption class="more-table__name">Название таблицы</caption>
-                                          <thead class="more-table__header">
-                                                <td class="more-table__header-name">№</td>
-                                                <td class="more-table__header-name">Название</td>
-                                                <td class="more-table__header-name">Цена</td>
-                                                <td class="more-table__header-name">Атрибут</td>
-                                                <td class="more-table__header-name">Клиент</td>
-                                                <td class="more-table__header-name">Действия</td>
-                                          </thead>
-                                          <tbody class="more-table__body">
-                                                <tr class="more-table__line">
-                                                      <td class="more-table__line-item">0145</td>
-                                                      <td class="more-table__line-item">ООО «Интеллектуальный дизайн»
-                                                      </td>
-                                                      <td class="more-table__line-item">100 000 ₽</td>
-                                                      <td class="more-table__line-item">59083056</td>
-                                                      <td class="more-table__line-item">ООО «Рога и Копыта»</td>
-                                                      <td class="more-table__line-item"><button
-                                                                  class="more-table__line-button" type="submit"
-                                                                  value="submit">Выбрать</button></td>
-                                                </tr>
-                                                <tr class="more-table__line">
-                                                      <td class="more-table__line-item">0145</td>
-                                                      <td class="more-table__line-item">ООО «Интеллектуальный дизайн»
-                                                      </td>
-                                                      <td class="more-table__line-item">100 000 ₽</td>
-                                                      <td class="more-table__line-item">59083056</td>
-                                                      <td class="more-table__line-item">ООО «Рога и Копыта»</td>
-                                                      <td class="more-table__line-item"><button
-                                                                  class="more-table__line-button" type="submit"
-                                                                  value="submit">Выбрать</button></td>
-                                                </tr>
-                                                <tr class="more-table__line">
-                                                      <td class="more-table__line-item">0145</td>
-                                                      <td class="more-table__line-item">ООО «Интеллектуальный дизайн»
-                                                      </td>
-                                                      <td class="more-table__line-item">100 000 ₽</td>
-                                                      <td class="more-table__line-item">59083056</td>
-                                                      <td class="more-table__line-item">ООО «Рога и Копыта»</td>
-                                                      <td class="more-table__line-item"><button
-                                                                  class="more-table__line-button" type="submit"
-                                                                  value="submit">Выбрать</button></td>
-                                                </tr>
-                                                <tr class="more-table__line">
-                                                      <td class="more-table__line-item">0145</td>
-                                                      <td class="more-table__line-item">ООО «Интеллектуальный дизайн»
-                                                      </td>
-                                                      <td class="more-table__line-item">100 000 ₽</td>
-                                                      <td class="more-table__line-item">59083056</td>
-                                                      <td class="more-table__line-item">ООО «Рога и Копыта»</td>
-                                                      <td class="more-table__line-item"><button
-                                                                  class="more-table__line-button" type="submit"
-                                                                  value="submit">Выбрать</button></td>
-                                                </tr>
-                                          </tbody>
-                                    </table>
+                                    <div class="more-table-wrapper">
+                                          <table class="more-table">
+                                                <caption class="more-table__name">Название таблицы</caption>
+                                                <thead class="more-table__header">
+                                                      <tr class="more-table__header-line">
+                                                            <td class="more-table__header-td1">№</td>
+                                                            <td class="more-table__header-td2">Название</td>
+                                                            <td class="more-table__header-td3">Цена</td>
+                                                            <td class="more-table__header-td4">Атрибут</td>
+                                                            <td class="more-table__header-td5">Клиент</td>
+                                                            <td class="more-table__header-td6">Действия</td>
+                                                      </tr>
+                                                </thead>
+                                                <tbody class="more-table__body">
+                                                      <tr class="more-table__line">
+                                                            <td class="more-table__line-td1">0145</td>
+                                                            <td class="more-table__line-td2">ООО «Интеллектуальный
+                                                                  дизайн»
+                                                            </td>
+                                                            <td class="more-table__line-td3">100 000 ₽</td>
+                                                            <td class="more-table__line-td4">59083056</td>
+                                                            <td class="more-table__line-td5">ООО «Рога и Копыта»</td>
+                                                            <td class="more-table__line-td6"><button
+                                                                        class="more-table__line-button" type="submit"
+                                                                        value="submit">Выбрать</button></td>
+                                                      </tr>
+                                                      <tr class="more-table__line">
+                                                            <td class="more-table__line-td1">0145</td>
+                                                            <td class="more-table__line-td2">ООО «Интеллектуальный
+                                                                  дизайн»
+                                                            </td>
+                                                            <td class="more-table__line-td3">100 000 ₽</td>
+                                                            <td class="more-table__line-td4">59083056</td>
+                                                            <td class="more-table__line-td5">ООО «Рога и Копыта»</td>
+                                                            <td class="more-table__line-td6"><button
+                                                                        class="more-table__line-button" type="submit"
+                                                                        value="submit">Выбрать</button></td>
+                                                      </tr>
+                                                      <tr class="more-table__line">
+                                                            <td class="more-table__line-td1">0145</td>
+                                                            <td class="more-table__line-td2">ООО «Интеллектуальный
+                                                                  дизайн»
+                                                            </td>
+                                                            <td class="more-table__line-td3">100 000 ₽</td>
+                                                            <td class="more-table__line-td4">59083056</td>
+                                                            <td class="more-table__line-td5">ООО «Рога и Копыта»</td>
+                                                            <td class="more-table__line-td6"><button
+                                                                        class="more-table__line-button" type="submit"
+                                                                        value="submit">Выбрать</button></td>
+                                                      </tr>
+                                                      <tr class="more-table__line">
+                                                            <td class="more-table__line-td1">0145</td>
+                                                            <td class="more-table__line-td2">ООО «Интеллектуальный
+                                                                  дизайн»
+                                                            </td>
+                                                            <td class="more-table__line-td3">100 000 ₽</td>
+                                                            <td class="more-table__line-td4">59083056</td>
+                                                            <td class="more-table__line-td5">ООО «Рога и Копыта»</td>
+                                                            <td class="more-table__line-td6"><button
+                                                                        class="more-table__line-button" type="submit"
+                                                                        value="submit">Выбрать</button></td>
+                                                      </tr>
+                                                </tbody>
+                                          </table>
+                                          <div class="more-table__line-grey"></div>
+                                    </div>
                               </section>
                         </section>
                   </div>
