--- a/blocks.html
+++ b/blocks.html
@@ -111,7 +111,7 @@
                         </section>
                         <section class="blocks__more">
                               <h2 class="blocks__headline">Остальное</h2>
-                              <section class="blocks__more-sliders-block">
+                              <section class="blocks__more-sliders">
                                     <h3 class="blocks__more-slider-name">Слайдер с отзывами</h3>
                                     <div class="more-slider__container">
                                           <div class="more-slider__wrapper">
@@ -155,6 +155,26 @@
                                                             class="visually-hidden">вперед</span></button>
 
                                           </div>
+
+                                    </div>
+                              </section>
+                              <section class="blocks__more-photo">
+                                    <h3 class="blocks__more-photo-name">Слайдер с фотографиями</h3>
+                                    <div class="more-photo__wrapper">
+                                          <div class="more-photo__slider1">
+                                                <img src="img/unsplash.jpg" class="more-photo__slider1-img" width="1039"
+                                                      height="692" alt="photo-one">
+
+                                          </div>
+                                          <div class="more-photo__slider2">
+                                                <img src="img/unsplash2.jpg" class="more-photo__slider2-img"
+                                                      width="1039" height="692" alt="photo-two">
+
+                                          </div>
+                                          <button class="more-photo__button-back" type="button" value="button"><span
+                                                      class="visually-hidden">назад</span></button>
+                                          <button class="more-photo__button-forward" type="button" value="button"><span
+                                                      class="visually-hidden">вперед</span></button>
 
                                     </div>
                               </section>
