--- a/blocks.html
+++ b/blocks.html
@@ -107,6 +107,75 @@
                               <h2 class="blocks__headline">Футеры</h2>
                               <h3 class="blocks__name">Футер #1</h3>
                               <footer class="blocks__footer1-wrapper">
+                                    <div class="footer1__top-container">
+                                          <div class="footer1__top">
+                                                <div class="footer1__top-subscribe">
+                                                      <a href="" class="footer1__top-subscribe-link"></a>
+                                                      <form action="" class="footer1__top-subscribe-form" method="POST">
+                                                            <label
+                                                                  class="footer1__top-subscribe-label">Лейбл</label><input
+                                                                  class="footer1__top-subscribe-input" type="text"
+                                                                  placeholder="Заглушка">
+                                                            <input type="submit" name="submit" value="ok"
+                                                                  class="footer1__top-subscribe-input-button">
+                                                      </form>
+                                                </div>
+                                                <div class="footer1__top-column1">
+                                                      <h4 class="footer1__top-column1-name">Категория</h4>
+                                                      <ul class="footer1__top-column1-list">
+                                                            <li class="footer1__top-column1-item"><a href=""
+                                                                        class="footer1__top-column1-link">Компания</a>
+                                                            </li>
+                                                            <li class="footer1__top-column1-item"><a href=""
+                                                                        class="footer1__top-column1-link">Работы</a>
+                                                            </li>
+                                                            <li class="footer1__top-column1-item"><a href=""
+                                                                        class="footer1__top-column1-link">Отзывы</a>
+                                                            </li>
+                                                            <li class="footer1__top-column1-item"><a href=""
+                                                                        class="footer1__top-column1-link">Услуги</a>
+                                                            </li>
+                                                      </ul>
+                                                </div>
+                                                <div class="footer1__top-column2">
+                                                      <h4 class="footer1__top-column2-name">Категория</h4>
+                                                      <ul class="footer1__top-column2-list">
+                                                            <li class="footer1__top-column2-item"><a href=""
+                                                                        class="footer1__top-column2-link">Компания</a>
+                                                            </li>
+                                                            <li class="footer1__top-column2-item"><a href=""
+                                                                        class="footer1__top-column2-link">Работы</a>
+                                                            </li>
+                                                            <li class="footer1__top-column2-item"><a href=""
+                                                                        class="footer1__top-column2-link">Отзывы</a>
+                                                            </li>
+                                                            <li class="footer1__top-column2-item"><a href=""
+                                                                        class="footer1__top-column2-link">Услуги</a>
+                                                            </li>
+                                                      </ul>
+                                                </div>
+                                                <div class="footer1__top-column3">
+                                                      <h4 class="footer1__top-column3-name">Категория</h4>
+                                                      <ul class="footer1__top-column3-list">
+                                                            <li class="footer1__top-column3-item"><a href=""
+                                                                        class="footer1__top-column3-link">Компания</a>
+                                                            </li>
+                                                            <li class="footer1__top-column3-item"><a href=""
+                                                                        class="footer1__top-column3-link">Работы</a>
+                                                            </li>
+                                                      </ul>
+                                                </div>
+                                          </div>
+                                    </div>
+                                    <div class="footer1__bottom-container">
+                                          <div class="footer1__bottom">
+                                                <div class="footer1__bottom-icon-container"></div>
+                                                <a href="" class="footer1__bottom-regulations-link">Правила</a>
+                                                <a href="" class="footer1__bottom-confidentiality-link">Политика
+                                                      конфиденциальности</a>
+                                                <span class="footer1__bottom-post">© 2018 Stride</span>
+                                          </div>
+                                    </div>
                               </footer>
                         </section>
                         <section class="blocks__more">
@@ -159,7 +228,7 @@
                                     </div>
                               </section>
                               <section class="blocks__more-photo">
-                                    <h3 class="blocks__more-photo-name">Слайдер с фотографиями</h3>
+                                    <h3 class="blocks__name">Слайдер с фотографиями</h3>
                                     <div class="more-photo__wrapper">
                                           <div class="more-photo__slider1">
                                                 <img src="img/unsplash.jpg" class="more-photo__slider1-img" width="1039"
@@ -179,7 +248,7 @@
                                     </div>
                               </section>
                               <section class="blocks__more-tariff">
-                                    <h3 class="blocks__more-tariff-name">Тарифы</h3>
+                                    <h3 class="blocks__name">Тарифы</h3>
                                     <div class="more-tariff__container">
                                           <div class="more-tariff__free">
                                                 <div class="more-tariff__free-header">
@@ -226,7 +295,7 @@
                                     </div>
                               </section>
                               <section class="blocks__more-table">
-                                    <h3 class="blocks__more-table-name">Таблица</h3>
+                                    <h3 class="blocks__name">Таблица</h3>
                                     <div class="more-table-wrapper">
                                           <table class="more-table">
                                                 <caption class="more-table__name">Название таблицы</caption>
