--- a/blocks.html
+++ b/blocks.html
@@ -181,7 +181,7 @@
                         <section class="blocks__more">
                               <h2 class="blocks__headline">Остальное</h2>
                               <section class="blocks__more-sliders">
-                                    <h3 class="blocks__more-slider-name">Слайдер с отзывами</h3>
+                                    <h3 class="blocks__name">Слайдер с отзывами</h3>
                                     <div class="more-slider__container">
                                           <div class="more-slider__wrapper">
                                                 <div class="more-slider__slider1">
