--- a/blocks.html
+++ b/blocks.html
@@ -113,9 +113,9 @@
                                                       <a href="" class="footer1__top-subscribe-link"></a>
                                                       <form action="" class="footer1__top-subscribe-form" method="POST">
                                                             <label
-                                                                  class="footer1__top-subscribe-label">Лейбл</label><input
+                                                                  class="footer1__top-subscribe-label">Подпишитесь</label><input
                                                                   class="footer1__top-subscribe-input" type="text"
-                                                                  placeholder="Заглушка">
+                                                                  placeholder="Ваш e-mail">
                                                             <input type="submit" name="submit" value="ok"
                                                                   class="footer1__top-subscribe-input-button">
                                                       </form>
@@ -169,7 +169,23 @@
                                     </div>
                                     <div class="footer1__bottom-container">
                                           <div class="footer1__bottom">
-                                                <div class="footer1__bottom-icon-container"></div>
+                                                <div class="footer1__bottom-icon-container">
+                                                      <a href="" class="footer1__bottom-icon"><img src="img/icon.svg"
+                                                                  class="footer1__bottom-icon-img" width="20"
+                                                                  height="20" alt="socialicon"></a>
+                                                      <a href="" class="footer1__bottom-icon"><img src="img/icon.svg"
+                                                                  class="footer1__bottom-icon-img" width="20"
+                                                                  height="20" alt="socialicon"></a>
+                                                      <a href="" class="footer1__bottom-icon"><img src="img/icon.svg"
+                                                                  class="footer1__bottom-icon-img" width="20"
+                                                                  height="20" alt="socialicon"></a>
+                                                      <a href="" class="footer1__bottom-icon"><img src="img/icon.svg"
+                                                                  class="footer1__bottom-icon-img" width="20"
+                                                                  height="20" alt="socialicon"></a>
+                                                      <a href="" class="footer1__bottom-icon"><img src="img/icon.svg"
+                                                                  class="footer1__bottom-icon-img" width="20"
+                                                                  height="20" alt="socialicon"></a>
+                                                </div>
                                                 <a href="" class="footer1__bottom-regulations-link">Правила</a>
                                                 <a href="" class="footer1__bottom-confidentiality-link">Политика
                                                       конфиденциальности</a>
@@ -310,52 +326,52 @@
                                                       </tr>
                                                 </thead>
                                                 <tbody class="more-table__body">
-                                                      <tr class="more-table__line">
-                                                            <td class="more-table__line-td1">0145</td>
-                                                            <td class="more-table__line-td2">ООО «Интеллектуальный
+                                                      <tr class="more-table__body-line">
+                                                            <td class="more-table__body-td1">0145</td>
+                                                            <td class="more-table__body-td2">ООО «Интеллектуальный
                                                                   дизайн»
                                                             </td>
-                                                            <td class="more-table__line-td3">100 000 ₽</td>
-                                                            <td class="more-table__line-td4">59083056</td>
-                                                            <td class="more-table__line-td5">ООО «Рога и Копыта»</td>
-                                                            <td class="more-table__line-td6"><button
-                                                                        class="more-table__line-button" type="submit"
+                                                            <td class="more-table__body-td3">100 000 ₽</td>
+                                                            <td class="more-table__body-td4">59083056</td>
+                                                            <td class="more-table__body-td5">ООО «Рога и Копыта»</td>
+                                                            <td class="more-table__body-td6"><button
+                                                                        class="more-table__body-button" type="submit"
                                                                         value="submit">Выбрать</button></td>
                                                       </tr>
-                                                      <tr class="more-table__line">
-                                                            <td class="more-table__line-td1">0145</td>
-                                                            <td class="more-table__line-td2">ООО «Интеллектуальный
+                                                      <tr class="more-table__body-line">
+                                                            <td class="more-table__body-td1">0145</td>
+                                                            <td class="more-table__body-td2">ООО «Интеллектуальный
                                                                   дизайн»
                                                             </td>
-                                                            <td class="more-table__line-td3">100 000 ₽</td>
-                                                            <td class="more-table__line-td4">59083056</td>
-                                                            <td class="more-table__line-td5">ООО «Рога и Копыта»</td>
-                                                            <td class="more-table__line-td6"><button
-                                                                        class="more-table__line-button" type="submit"
+                                                            <td class="more-table__body-td3">100 000 ₽</td>
+                                                            <td class="more-table__body-td4">59083056</td>
+                                                            <td class="more-table__body-td5">ООО «Рога и Копыта»</td>
+                                                            <td class="more-table__body-td6"><button
+                                                                        class="more-table__body-button" type="submit"
                                                                         value="submit">Выбрать</button></td>
                                                       </tr>
-                                                      <tr class="more-table__line">
-                                                            <td class="more-table__line-td1">0145</td>
-                                                            <td class="more-table__line-td2">ООО «Интеллектуальный
+                                                      <tr class="more-table__body-line">
+                                                            <td class="more-table__body-td1">0145</td>
+                                                            <td class="more-table__body-td2">ООО «Интеллектуальный
                                                                   дизайн»
                                                             </td>
-                                                            <td class="more-table__line-td3">100 000 ₽</td>
-                                                            <td class="more-table__line-td4">59083056</td>
-                                                            <td class="more-table__line-td5">ООО «Рога и Копыта»</td>
-                                                            <td class="more-table__line-td6"><button
-                                                                        class="more-table__line-button" type="submit"
+                                                            <td class="more-table__body-td3">100 000 ₽</td>
+                                                            <td class="more-table__body-td4">59083056</td>
+                                                            <td class="more-table__body-td5">ООО «Рога и Копыта»</td>
+                                                            <td class="more-table__body-td6"><button
+                                                                        class="more-table__body-button" type="submit"
                                                                         value="submit">Выбрать</button></td>
                                                       </tr>
-                                                      <tr class="more-table__line">
-                                                            <td class="more-table__line-td1">0145</td>
-                                                            <td class="more-table__line-td2">ООО «Интеллектуальный
+                                                      <tr class="more-table__body-line">
+                                                            <td class="more-table__body-td1">0145</td>
+                                                            <td class="more-table__body-td2">ООО «Интеллектуальный
                                                                   дизайн»
                                                             </td>
-                                                            <td class="more-table__line-td3">100 000 ₽</td>
-                                                            <td class="more-table__line-td4">59083056</td>
-                                                            <td class="more-table__line-td5">ООО «Рога и Копыта»</td>
-                                                            <td class="more-table__line-td6"><button
-                                                                        class="more-table__line-button" type="submit"
+                                                            <td class="more-table__body-td3">100 000 ₽</td>
+                                                            <td class="more-table__body-td4">59083056</td>
+                                                            <td class="more-table__body-td5">ООО «Рога и Копыта»</td>
+                                                            <td class="more-table__body-td6"><button
+                                                                        class="more-table__body-button" type="submit"
                                                                         value="submit">Выбрать</button></td>
                                                       </tr>
                                                 </tbody>
