--- a/components.html
+++ b/components.html
@@ -80,6 +80,37 @@
                                     разработки проекта. Имеющиеся компоненты (цвета, типографика, формы и т.д.) легко
                                     дублировать и создавать новые интерфейсы на их основе.</p>
                         </header>
+                        <section class="components__tooltip">
+                              <h2 class="visually-hidden">Поля</h2>
+                              <table class="components__tooltip-table">
+                                    <caption class="components__tooltip-headline">Тултипы</caption>
+                                    <tr class="components__tooltip-hint">
+                                          <td class="components__tooltip-name">Хинт</td>
+                                          <td class="components__tooltip-hint-style">
+                                                <div class="components__tooltip-hint-container">
+                                                      <span class="components__tooltip-hint-text">Введите ваш
+                                                            телефон</span><span
+                                                            class="components__tooltip-hint-icon"></span>
+
+                                                      <div class="components__tooltip-hint-popup">Чтобы мы могли
+                                                            связаться с вами в случае чего</div>
+                                                </div>
+                                          </td>
+                                    </tr>
+                                    <tr class="components__tooltip-bottom">
+                                          <td class="components__tooltip-name">Обычны снизу</td>
+                                          <td class="components__tooltip-bottom-style">
+                                                <div class="components__tooltip-bottom-container">
+                                                      <span class="components__tooltip-bottom-text">Показать
+                                                            тултип</span>
+                                                      <div class="components__tooltip-bottom-popup">Тултипы являются
+                                                            дополнительным элементом подсказки в интерфейсе</div>
+                                                </div>
+                                          </td>
+                                    </tr>
+
+                              </table>
+                        </section>
                   </div>
             </main>
       </div>
